[project]
name = "rpg-heaven"
version = "0.1.0"
description = ""
authors = [
    {name = "Sunzheini",email = "daniel_zorov@abv.bg"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
